# Ocean-Eterna

./: .gitignore  ACCURACY_ANALYSIS.md  API.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  BUILD.md  CHANGELOG_2026_01_24.md  CMakeLists.txt  COMMERCIAL_COMPARISON.md  CONFIGURATION.md  FIX_HTTP_BUG_PLAN.md  IMPROVEMENTS_QUICK_REFERENCE.md  IMPROVEMENT_IDEAS.md  IMPROVEMENT_PLAN_2026_02_01.md  LICENSE  MASTER_PLAN_COMPLETE.md  OCEAN_ETERNA_TECHNICAL_SPEC.md  PERFORMANCE_REPORT.md  PROJECT_STATUS.md  QUICK_REFERENCE_UNIFIED.md  README.md  SPEED_IMPROVEMENTS_RESULTS.md  SYNTHESIS.md  TODO.md  UNIFIED_IMPROVEMENT_PLAN.md  V4_CHANGELOG.md  V4_HONEST_REVIEW.md  VERSION_COMPARISON.md  auto_ingest.py  doc_processor.py  httplib.h  json.hpp  mcp_requirements.txt  mcp_server.py  sync_memory_to_oe.sh  v4_honest_review.md
benchmarks/: benchmark.py  benchmark_results.json
chat/: DEMO_README.md  binary_manifest.hpp  config.hpp  config.json  convert_manifest  ocean_chat_server  ocean_chat_server.cpp  ocean_chat_server_v2  ocean_chat_server_v3  ocean_demo.html  search_engine.hpp  test_accuracy.py  test_binary_manifest  test_comprehensive.py
chat/backups/: PROJECT_STATUS.md  RESTORE.sh  TECHNICAL_CHANGELOG.md  binary_manifest_pre_step11.hpp  config_pre_step8.json  llm_client.hpp.step23  ocean_chat_server_100pct_accuracy_2026-01-31.cpp  ocean_chat_server_pre_step1.cpp  ocean_chat_server_pre_step10.cpp  ocean_chat_server_pre_step11.cpp  ocean_chat_server_pre_step12.cpp  ocean_chat_server_pre_step13.cpp  ocean_chat_server_pre_step14.cpp  ocean_chat_server_pre_step17.cpp  ocean_chat_server_pre_step18.cpp  ocean_chat_server_pre_step19.cpp  ocean_chat_server_pre_step2.cpp  ocean_chat_server_pre_step20.cpp  ocean_chat_server_pre_step22.cpp  ocean_chat_server_pre_step25.cpp  ocean_chat_server_pre_step3.cpp  ocean_chat_server_pre_step4.cpp  ocean_chat_server_pre_step5.cpp  ocean_chat_server_pre_step6.cpp  ocean_chat_server_pre_step7.cpp  ocean_chat_server_pre_step8.cpp  ocean_chat_server_pre_step9.cpp  ocean_demo_pre_step26.html  search_engine_pre_step20.hpp  search_engine_pre_step22.hpp  search_engine_pre_step23.hpp  test_comprehensive_pre_step21.py
core/: ocean_build  ocean_build.cpp
integrations/: README.md
integrations/agent-zero/: mcp_config.json
integrations/agent-zero/sloan/: Dockerfile  docker-compose.yml  settings.json  test_sloan.sh
integrations/agent-zero/sloan/sloan-data/: settings.json
integrations/agent-zero/sloan/sloan-data/knowledge/main/: NETWORK_SETUP.md  NETWORK_STATUS.md  SLOAN_RULES.md  oe_auto_ingest.md
integrations/agent-zero/sloan/sloan-data/projects/the_human_fraction/.a0proj/: project.json
integrations/agent-zero/sloan/sloan-data/workdir/: THF_Chapter10_Database.md  THF_Chapter10_Draft.md  THF_Chapter1_Database.md  THF_Chapter1_Draft.md  THF_Chapter1_Expanded.md  THF_Chapter2_Database.md  THF_Chapter2_Draft.md  THF_Chapter3_Database.md  THF_Chapter3_Draft.md  THF_Chapter4_Database.md  THF_Chapter4_Draft.md  THF_Chapter5_Database.md  THF_Chapter5_Draft.md  THF_Chapter6_Database.md  THF_Chapter6_Draft.md  THF_Chapter7_Database.md  THF_Chapter7_Draft.md  THF_Chapter8_Database.md  THF_Chapter8_Draft.md  THF_Chapter9_Database.md  THF_Chapter9_Draft.md  auto_author_phase2.py  auto_author_pipeline.py  ch10_agi_model.py  ch1_time_perception_model.py  ch2_taphonomic_model.py  ch3_real_nlp.py  ch3_stylometric_model.py  ch4_bathymetrics_model.py  ch5_nbody_model.py  ch6_petm_model.py  ch7_extinction_model.py  ch8_drake_model.py  ch9_suppression_model.py  grader_bot.py  pipeline.py
integrations/agent-zero/sloan/sloan-data/workdir/Manuscript_Longform/: Chapter_01_Expanded_Phase2_Test.md  Chapter_01_The_Shrinking_Year.md  Chapter_02_The_Known_Record.md  Chapter_03_The_Disputed_Texts.md  Chapter_04_Cities_Beneath_the_Waves.md  Chapter_05_The_Celestial_Record.md  Chapter_06_The_Deep_Time_Question.md  Chapter_07_What_Lives_Below.md  Chapter_08_The_Numbers_on_Them.md  Chapter_09_The_Vanishing_Science.md  Chapter_10_The_Machine_Horizon.md
integrations/ironclaw/: mcp_config.json
integrations/openclaw/: SKILL.md
integrations/picoclaw/: SKILL.md
integrations/tinyclaw/: oe_tool.ts
tests/: config_test.cpp  mmap_format_test.cpp  porter_stemmer_test.cpp
v7.11/: NOTE.md
v8.0/: binary_manifest.hpp  bulk_build.cpp  mmap_index.hpp  ocean_chat_server.cpp  search_engine.hpp
v9.0/: binary_manifest.hpp  build_segments.sh  bulk_build.cpp  config.hpp  config.json  entity_extractor.hpp  llm_client.hpp  meta_example.json  mmap_index.hpp  ocean_chat_server.cpp  search_engine.hpp
